# bolt3

./: AGENTS.md  README.md  flake.nix  ppad-bolt3.cabal
bench/: Main.hs  Weight.hs
lib/Lightning/Protocol/: BOLT3.hs
lib/Lightning/Protocol/BOLT3/: Decode.hs  Encode.hs  Internal.hs  Keys.hs  Scripts.hs  Tx.hs  Types.hs  Validate.hs
plans/: ARCH1.md  ARCH2.md  ARCH3.md  IMPL1.md  IMPL2a.md  IMPL2b.md  IMPL3.md  REVIEW1.md
test/: Main.hs
