cabal-version:      3.0
name:               ppad-bolt3
version:            0.0.1
synopsis:           Bitcoin transaction formats per BOLT #3
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  Bitcoin transaction formats for the Lightning Network, per
  [BOLT #3](https://github.com/lightning/bolts/blob/master/03-transactions.md).

source-repository head
  type:     git
  location: git.ppad.tech/bolt3.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Lightning.Protocol.BOLT3
      Lightning.Protocol.BOLT3.Decode
      Lightning.Protocol.BOLT3.Encode
      Lightning.Protocol.BOLT3.Keys
      Lightning.Protocol.BOLT3.Scripts
      Lightning.Protocol.BOLT3.Tx
      Lightning.Protocol.BOLT3.Types
      Lightning.Protocol.BOLT3.Validate
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-ripemd160
    , ppad-sha256

test-suite bolt3-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , bytestring
    , ppad-bolt3
    , tasty
    , tasty-hunit

benchmark bolt3-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-bolt3

benchmark bolt3-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , deepseq
    , ppad-bolt3
    , weigh

